# nml-to-json

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  NMLToJSON.f90
Tests/: CMakeLists.txt  Test1.nml  Test2.nml  Test3.nml  Test4.nml  compare.py  convert.f90  reference.py  run_test.py  run_test.sh
